[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "market-narrative-risk-intelligence"
version = "1.0.0"
description = "Market Narrative Risk Intelligence System"
authors = [
    {name = "Data Science Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "tensorflow>=2.13.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "streamlit>=1.25.0",
    "plotly>=5.15.0",
    "shap>=0.42.0",
    "lime>=0.2.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "selenium>=4.10.0",
    "pyarrow>=12.0.0",
    "scipy>=1.11.0",
    "nltk>=3.8.0",
    "textblob>=0.17.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.0",
    "pyyaml>=6.0",
    "joblib>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
