[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-narrative-risk-intelligence"
version = "1.0.0"
description = "Market Narrative Risk Intelligence System for detecting market stress from news narratives"
authors = [
    {name = "Data Science Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    "scipy>=1.11.0",
    
    # Machine learning core
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "joblib>=1.3.0",
    
    # Text processing
    "nltk>=3.8.0",
    "textblob>=0.17.0",
    
    # Web scraping
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    
    # Utilities
    "python-dateutil>=2.8.0",
    "pytz>=2023.0",
    "pyyaml>=6.0",
    
    # Model explainability
    "shap>=0.42.0",
    "lime>=0.2.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.25.0",
    "plotly>=5.15.0",
]

tensorflow = [
    "tensorflow>=2.13.0",
    "keras>=2.13.0",
]

pytorch = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

selenium = [
    "selenium>=4.10.0",
    "webdriver-manager>=4.0.0",
]

full = [
    "market-narrative-risk-intelligence[dashboard]",
    "market-narrative-risk-intelligence[tensorflow]",
    "market-narrative-risk-intelligence[selenium]",
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/market-narrative-risk-intelligence"
Documentation = "https://github.com/your-username/market-narrative-risk-intelligence#readme"
Repository = "https://github.com/your-username/market-narrative-risk-intelligence"
Issues = "https://github.com/your-username/market-narrative-risk-intelligence/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.txt", "*.md"]

[project.scripts]
mnri-pipeline = "src.main:main"
mnri-dashboard = "src.dashboard.app:main"
